# zeno_youtube_summarizer_RAG

./: .gitignore  docker-compose.yml  index.html  netlify.toml  package.json
.claude/: settings.local.json
public/: _redirects
src/: App.jsx  index.css  main.jsx
src/components/: MessageBubble.jsx  Sidebar.jsx  VideoList.jsx  WelcomeScreen.jsx
src/context/: AuthContext.jsx
src/hooks/: useChat.js
src/pages/: ChatPage.jsx  LoginPage.jsx
zeno_screen/: package-lock.json  package.json  vite.config.js
zeno_screen/src/: App.jsx  index.css
zeno_screen/src/components/: ChatInput.jsx  ErrorBoundary.jsx  MessageBubble.jsx  ProtectedRoute.jsx  Sidebar.jsx  WelcomeScreen.jsx  YoutubeInput.jsx
zeno_screen/src/context/: AuthContext.jsx
zeno_screen/src/hooks/: useChat.js  useChatHistory.js
zeno_screen/src/pages/: ChatPage.jsx  LoginPage.jsx
zeno_screen/src/service/: api.js
zeno_server/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  schema.sql  zeno-server-key.pem
